fix some styles on firefox

--- a/src/app/modules/services-catalog/service-details/service-details.component.css
+++ b/src/app/modules/services-catalog/service-details/service-details.component.css
@@ -15,9 +15,11 @@
 }
 
 [dir="rtl"] :host::ng-deep #control-container {
-    text-align: -webkit-left;
+    text-align: -webkit-left;    
+    text-align: -moz-left;
 }
 
 [dir="ltr"] :host::ng-deep #control-container {
     text-align: -webkit-right;
+    text-align: -moz-right;
 }
